# uv-ruff-template

./: Dockerfile  Dockerfile-Multi-stage  Dockerfile-workspace  README.md  main.py  pyproject.toml
