[project]
name = "uv-ruff-template"
version = "0.1.0"
description = "A modern Python project template featuring uv, Ruff, Mypy, and pre-commit."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "PIE",    # flake8-pie
    "DTZ",    # flake8-datetimez
]
ignore = [
    "E501",   # line too long (handled by formatter)
]
[tool.ruff.lint.isort]
known-first-party = ["uv_ruff_template"]
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
ignore_missing_imports = true